tests/sources/invalid/classes/constructor_call_arg_type.fire
// Semantic error: 'new ClassName(...)' with an argument of the wrong type
// for the declared constructor.

class Point {
    int32 x;
    int32 y;

    Point(int32 x, int32 y) {
        this.x = x;
        this.y = y;
    }
}

void constructor_call_arg_type() {
    Point p = new Point("bad", 5);  //~ ERROR FS-SEM-0010 @25
}
